Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-681

Addressing information is not engaged properly in the fault out flow.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.1.0
    • None
    • None

    Description

      In the out fault flow, addressing information can not be included. When the following change is done into the engine.c, addressing information can be sent back in the out fault flow. But its not the exact fault flow information, its only the addressing information.

      AXIS2_EXTERN axis2_status_t AXIS2_CALL
      axis2_engine_send_fault(
      axis2_engine_t *engine,
      const axutil_env_t *env,
      axis2_msg_ctx_t *msg_ctx)
      {
      axis2_op_ctx_t *op_ctx = NULL;
      axutil_array_list_t *phases = NULL;

      AXIS2_ENV_CHECK(env, AXIS2_FAILURE);
      AXIS2_PARAM_CHECK(env->error, msg_ctx, AXIS2_FAILURE);

      op_ctx = axis2_msg_ctx_get_op_ctx(msg_ctx, env);
      if (op_ctx)
      {
      axis2_op_t *op = axis2_op_ctx_get_op(op_ctx, env);
      if (op)

      { phases = axis2_op_get_fault_out_flow(op, env); }

      }
      if (!( axis2_msg_ctx_is_paused(msg_ctx, env)))
      {
      /* send the SOAP Fault*/
      axis2_conf_ctx_t *conf_ctx = NULL;
      axis2_transport_sender_t *transport_sender = NULL;
      axis2_transport_out_desc_t *transport_out = NULL;
      conf_ctx = axis2_msg_ctx_get_conf_ctx(msg_ctx, env);
      if (conf_ctx)
      {
      /*axis2_conf_t *conf = axis2_conf_ctx_get_conf(conf_ctx, env);
      if (conf)
      {
      axutil_array_list_t *phases =
      axis2_conf_get_out_fault_flow(conf, env); */
      if (phases)

      { axis2_engine_invoke_phases(engine, env, phases, msg_ctx); }

      /* }*/
      }

      Attachments

        Activity

          People

            samisa Don Samisa Abeysinghe
            diluka Moratuwage Diluka Prasanjith Mortawage
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: