Fixed the fault handling problems when addressing is in use. AXIS2C-681